Use Chrome App Builder as a base

--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
-   "app": {
-      "background": {
-         "scripts": [ "main.js" ]
-      }
-   },
-   "author": "Jonathan Alfonso",
-   "description": "Anime Twist is a website which hosts thousands of episodes of anime, all videos are in the highest quality we can find, all hosted for your enjoyment.",
-   "icons": {
-      "128": "128.png",
-      "16": "16.png"
-   },
-   "name": "Anime Twist (*Unofficial*)",
-   "short_name": "Anime Twist",
-   "offline_enabled": false,
-   "permissions": [ "webview" ],
-   "update_url": "https://clients2.google.com/service/update2/crx",
-   "minimum_chrome_version": "24.0.1307.0",
-   "version": "0.1"
+	"name": "Anime Twist (*Unofficial*)",
+	"short_name": "Anime Twist",
+	"offline_enabled": false,
+	"author": "Jonathan Alfonso",
+	"description": "Anime Twist is a website which hosts thousands of episodes of anime, all videos are in the highest quality we can find, all hosted for your enjoyment.",
+	"icons": {
+		"128": "img/128.png",
+		"16": "img/16.png"
+	},
+	"version": "0.2",
+	"manifest_version": 2,
+	"minimum_chrome_version": "37.0.0.0",
+	"permissions": ["webview", "fullscreen", "power", "storage", "videoCapture", "geolocation", "pointerLock", "system.display", {
+		"fileSystem": ["write", "retainEntries", "directory"]
+	}, "accessibilityFeatures.read", "accessibilityFeatures.modify"],
+	"app": {
+		"background": {
+			"scripts": ["js/foam.js", "js/cab.js", "config.js", "background_main.js"]
+		}
+	}
 }
