--- a/manifest.json
+++ b/manifest.json
@@ -11,9 +11,9 @@
 	"version": "0.3",
 	"manifest_version": 2,
 	"minimum_chrome_version": "37.0.0.0",
-	"permissions": ["webview", "fullscreen", "power", "storage", "system.display", {
+	"permissions": ["webview", "power", "storage", "system.display", {
 		"fileSystem": ["write", "retainEntries", "directory"]
-	}, "accessibilityFeatures.read", "accessibilityFeatures.modify"],
+	}],
 	"app": {
 		"background": {
 			"scripts": ["js/foam.js", "js/cab.js", "config.js", "background_main.js"]
